Notify listeners on OffScreenCanvas changes

This CL adds a hook on commit() calls for OffScreenCanvas so that
the changes are notified to the listeners. setPlaceholderFrame()
calls are used as the hook.

BUG=679610
TEST=Added layout test checking for a single frame capture and content_browsertest
for a continuous capture.
Also tested on html demo
https://cdn.rawgit.com/uysalere/js-demos/master/offscreencanvas_user_commit.html

Review-Url: https://codereview.chromium.org/2632593003
Cr-Commit-Position: refs/heads/master@{#452127}

Former-commit-id: 8db1658c62cfe49d1be14bc0186d4c20152cfd84